XS screens : contact details on one row Will avoid overlap & screen stretching

--- a/css/style.scss
+++ b/css/style.scss
@@ -142,6 +142,13 @@ p{
     }
   }
   
+  
+  @media (max-width: 768px) {
+    .contact-details .col-xs-12 p{
+      text-align: left;
+    }
+  }
+  
 
   
 }
